[gd_scene load_steps=2 format=3 uid="uid://cs6bq4m0vtvo4"]

[ext_resource type="Script" path="res://logic/ui/map_editor_resize_popup.gd" id="1_kyk4b"]

[node name="ResizePopup" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -150.0
offset_right = 75.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kyk4b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Resize map"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "horizontal"

[node name="Horizontal" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = 20.0
max_value = 50.0
value = 20.0

[node name="HorizontalSize" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "20"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Vertical size:"

[node name="Vertical" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
min_value = 20.0
max_value = 50.0
value = 20.0

[node name="VerticalSize" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "20"
horizontal_alignment = 1

[node name="Accept" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Accept"

[node name="Cancel" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="value_changed" from="VBoxContainer/Horizontal" to="." method="_on_horizontal_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Vertical" to="." method="_on_vertical_value_changed"]
[connection signal="pressed" from="VBoxContainer/Accept" to="." method="_on_accept_pressed"]
[connection signal="pressed" from="VBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
